...
                            NavigationLink(destination: CuisineSelectionView(preferences: .constant(UserPreferences()))) {
                                HStack {
                                    Image(systemName: "heart.fill")
                                        .foregroundColor(.red)
                                        .frame(width: 30)

                                    Text("Favorite Cuisines")
                                        .foregroundColor(colors.text)

                                    Spacer()

                                    Text("Update")
                                        .foregroundColor(colors.primary)
...
